# apliarte-switch

./: .gitignore  LICENSE  README.md  idea.md
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: config.rs  main.rs
core/src/input/: linux.rs  macos.rs  mod.rs  protocol.rs  windows.rs
core/src/ipc/: mod.rs
core/src/network/: mod.rs
docs/: index.html  styles.css
scripts/: install.ps1  install.sh
ui/: README.md  pubspec.yaml
ui/lib/: main.dart
ui/lib/models/: ipc_models.dart
ui/lib/providers/: app_state.dart
ui/lib/screens/: device_scan_screen.dart  home_screen.dart
ui/lib/services/: ipc_service.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/macos/Runner/: Info.plist
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
