[package]
name = "apliarte-switch"
version = "0.1.0"
edition = "2021"
description = "KVM virtual — comparte teclado y ratón entre Mac, Windows y Linux por red local"
authors = ["Javier Mateo (ApliArte) <javier@apliarte.com>"]
license = "MIT"
repository = "https://github.com/erbolamm/apliarte-switch"
readme = "../README.md"
keywords = ["kvm", "keyboard", "mouse", "sharing", "network"]
categories = ["network-programming", "os"]

[dependencies]
# Async runtime — como el event loop de Flutter
tokio = { version = "1", features = ["full"] }

# Serialización de mensajes — como json_serializable en Flutter
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging — como debugPrint() en Flutter
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encriptación — para que los datos en red sean seguros
rustls = { version = "0.23", features = ["ring"] }

# Configuración desde archivos — como SharedPreferences en Flutter
config = "0.14"

# Rutas del sistema por SO (AppData, ~/.config, etc.)
dirs = "5"

# Errores más manejables
anyhow = "1"

# IPC: comunicación con la UI Flutter
interprocess = { version = "2", features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Input en macOS — acceso a CGEvent (API del sistema de Apple)
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
# Input en Windows — acceso a SendInput (API Win32)
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Threading",
]}

[target.'cfg(target_os = "linux")'.dependencies]
# Input en Linux — acceso a evdev / uinput
evdev = "0.12"
udev = "0.9"

[[bin]]
name = "apliarte-switch"
path = "src/main.rs"
